# filmr

./: .gitignore  ANDROID.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  README.md  artifacts.json  changelog.rss  filmr_app-installer.ps1.txt  filmr_app-installer.sh.txt  index.html
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release.yml  rust.yml  web.yml
android/: build-android.sh
apps/filmr/: Cargo.toml  Trunk.toml
apps/filmr/src/ui/: mod.rs  theme.rs
apps/filmr/src/ui/app/: io.rs  update.rs
apps/filmr/src/ui/components/: buttons.rs  mod.rs  pill_selector.rs  sliders.rs  tokens.rs
apps/filmr/src/ui/panels/: central.rs  studio.rs
apps/filmr/src/ui/panels/controls/: mod.rs  professional.rs  simple.rs
artifacts/: index.html
book/: 404.html  dynamic_range.html  film_characteristics.html  index.html  metrics.html  photochemistry.html  print.html  reference_data.html  rendering_pipeline.html  searchindex.js  searchindex.json  spectral_engine.html  spectral_sensitivity.html  validation.html
book/css/: variables.css
changelog/: index.html
changelog/models-v1/: index.html
changelog/v0.10.0/: index.html
changelog/v0.10.1/: index.html
changelog/v0.11.0/: index.html
changelog/v0.11.1/: index.html
changelog/v0.11.2/: index.html
changelog/v0.12.0/: index.html
changelog/v0.3.10/: index.html
changelog/v0.3.11/: index.html
changelog/v0.4.0/: index.html
changelog/v0.5.0/: index.html
changelog/v0.5.1/: index.html
changelog/v0.5.2/: index.html
changelog/v0.5.9/: index.html
changelog/v0.6.0/: index.html
changelog/v0.6.1/: index.html
changelog/v0.6.2/: index.html
changelog/v0.6.4/: index.html
changelog/v0.6.5/: index.html
changelog/v0.6.6/: index.html
changelog/v0.6.7/: index.html
changelog/v0.6.8/: index.html
changelog/v0.7.0/: index.html
changelog/v0.7.1/: index.html
changelog/v0.7.2/: index.html
changelog/v0.7.3/: index.html
changelog/v0.8.0/: index.html
changelog/v0.8.1/: index.html
changelog/v0.9.0/: index.html
changelog/v0.9.1/: index.html
src/: android.rs  depth.rs  film.rs  filmic_curve.rs  grain.rs  lib.rs  pipeline.rs  processor.rs  utils.rs
tests/: accurate_integration.rs  diag_compare.rs  diag_histogram.rs  verify_spectral.rs
web/: filmr_app.js  index.html  worker.js
xtask/: Cargo.toml
