[package]
name = "filmr"
version = "0.11.1"
edition = "2021"
authors = ["Benign X <1341398182@qq.com>", "W-Mai"]
description = "A high-fidelity, physics-based film simulation engine written in Rust."
readme = "README.md"
repository = "https://github.com/W-Mai/filmr"
license = "MIT"
keywords = ["film", "simulation", "photography", "image-processing", "analog"]
categories = ["multimedia::images", "rendering", "science"]
homepage = "https://benign.host/"

[workspace]
members = [
    ".",
    "apps/filmr",
    "xtask",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Only use ImageBuffer data structure, no format decoders needed
image = { version = "0.25", default-features = false }
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
rayon = "1.8" # For parallel processing of pixels
palette = "0.7.6"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
serde-big-array = "0.5.1"
wide = "1.1.1"
wgpu = { version = "28.0.0", optional = true }
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = { version = "0.4.0", optional = true }
futures = "0.3.31"
jni = { version = "0.21", optional = true, default-features = false }
rawler = { version = "0.7", optional = true, default-features = false }
rten = { version = "0.15", optional = true }
rten-tensor = { version = "0.15", optional = true }
ureq = { version = "3", optional = true }
dirs-next = { version = "2", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]
compute-gpu = ["dep:wgpu", "dep:pollster"]
depth = ["dep:rten", "dep:rten-tensor", "dep:ureq", "dep:dirs-next", "dep:sha2"]
android = ["dep:jni", "dep:rawler"]

[dev-dependencies]
criterion = "0.8.1"
imageproc = "0.26.0"
ab_glyph = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "processing_benchmark"
harness = false

[[bench]]
name = "mode_benchmark"
harness = false
