[package]
name = "filmr_app"
version = "0.12.0"
edition = "2021"
authors = ["Benign X <1341398182@qq.com>", "W-Mai"]
description = "CLI and GUI application for filmr, a high-fidelity film simulation engine."
readme = "../../README.md"
repository = "https://github.com/W-Mai/filmr"
license = "MIT"
keywords = ["film", "simulation", "gui", "cli", "photography"]
categories = ["multimedia::images", "command-line-utilities", "gui"]
homepage = "https://benign.host/"

[package.metadata.wix]
upgrade-guid = "BD2F561E-0A9B-49FE-B68D-72036EAB193F"
path-guid = "9549CC2F-B9E6-488F-A630-5821D6D02B5B"
license = false
eula = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
filmr = { version = "0.12.0", path = "../../", features = ["compute-gpu"] }
image = "0.25"
kamadak-exif = "0.5"
little_exif = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI dependencies
clap = { version = "4.5.54", features = ["derive"], optional = true }
log = "0.4"

# UI dependencies
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
rfd = { version = "0.17.2", optional = true }
egui_plot = { version = "0.34.0", optional = true }
egui_taffy = { version = "0.10.0", optional = true }
flume = { version = "0.11", optional = true }
rayon = { version = "1.8", optional = true }
egui-uix = { version = "0.1.0", git = "https://github.com/W-Mai/egui-uix", branch = "main" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"] }
parking_lot = { version = "0.12", features = ["nightly"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
console_log = "1.0"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", "Window", "Document", "Element",
    "DedicatedWorkerGlobalScope", "MessageEvent", "Worker",
    "Navigator", "console", "WorkerGlobalScope", "WorkerNavigator",
    "WorkerOptions", "WorkerType"
] }

[features]
default = ["cli", "ui", "compute-gpu", "depth"]
cli = ["dep:clap"]
ui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:egui_plot", "dep:egui_taffy", "dep:flume", "dep:rayon"]
compute-gpu = []
depth = ["filmr/depth"]

[[bin]]
name = "filmr"
path = "src/bin/filmr.rs"
required-features = ["cli", "ui"]

[[bin]]
name = "filmr-cli"
path = "src/bin/filmr-cli.rs"
required-features = ["cli"]

[[bin]]
name = "filmr-ui"
path = "src/bin/filmr-ui.rs"
required-features = ["ui"]
